--- a/my-app/content/posts/mdx-example.mdx
+++ b/my-app/content/posts/mdx-example.mdx
@@ -1,11 +1,12 @@
 ---
     title: Clean code
-    summary: Testing
+    summary: No mundo do desenvolvimento de software, há uma verdade universal, código é lido muito mais vezes do que é escrito. Por isso, escrever código limpo (clean code) não é apenas uma boa prática — é uma necessidade para a manutenção, escalabilidade e saúde de qualquer projeto.
     image: /images/authors/ricardo.png
     author: 'Ricardo Oliveira'
     publishedAt: '2024-08-08'
 ---
-# Clean Code: A Arte de Escrever Código que Humanos Conseguem Ler
+## Clean Code: A Arte de Escrever Código que Humanos Conseguem Ler
+
 
 No mundo do desenvolvimento de software, há uma verdade universal: **código é lido muito mais vezes do que é escrito**. Por isso, escrever código limpo (clean code) não é apenas uma boa prática — é uma necessidade para a manutenção, escalabilidade e saúde de qualquer projeto.
 
