adding new posts and projects

--- a/my-app/content/projects/vendorsAPI.mdx
+++ b/my-app/content/projects/vendorsAPI.mdx
@@ -379,11 +379,20 @@ vendors-api/
 
 Apache 2.0 – See `LICENSE` file for details
 
+
+
+---
+
 ## 👤 Contact
 
 **Ricardo Oliveira**
 📧 Email: [ricardo.fer.oliveira964@gmail.com](mailto:ricardo.fer.oliveira964@gmail.com)
 
----
+
+
+## Project link
+[ricardo-f-oli/vendorsAPI](https://github.com/ricardo-f-oli/vendorsAPI)
 
 > **Note**: This API is designed for learning and demonstration purposes. Adjust security configurations and database connections for production use.
+
+**Good night and good luck!**
